# fckgit

./: .cursorrules  .env.example  .gitignore  BLASTOFF.md  CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTIC_FINDINGS.md  FAANG_FLAG_USAGE.md  LICENSE  MANIFEST.in  MCP_INSTALLATION_COMPLETE.txt  MCP_README.md  MCP_SETUP.md  QUICK_START.md  README.md  SILICON_VALLEY.md  __init__.py  __main__.py  _timepon.yaml  _timepon.yaml.backup.1768833177743  fckgit.py  install.ps1  install.sh  install_mcp.ps1  install_mcp.sh  mcp_config_example.json  mcp_server.py  pyproject.toml  setup.py  test_mcp.py
.cursor/: mcp.json
.cursor/plans/: robust_git_workspace_detection_26dc3f0d.plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md
docs/guides/: BLASTOFF.md  FAANG_FLAG_COMPLETE.txt  SILICON_VALLEY.md  SILICON_VALLEY_SUMMARY.txt
docs/mcp/: MCP_INSTALLATION_COMPLETE.txt  MCP_README.md
examples/: cursor_config_example.mdc  mcp_config_example.json
mcp_server/: README.md  __init__.py  __main__.py  git_utils.py  logging_config.py  platform_utils.py  server.py  workspace.py
scripts/: install.ps1  install_mcp.ps1  install_mcp.sh
tests/: __init__.py  conftest.py  test_git_utils.py  test_platform_utils.py  test_workspace.py
