[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fckgit"
version = "0.2.2"
description = "Auto-commit with AI-generated messages using Gemini - Now with Silicon Valley Mode!"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "early_prototype"}
]
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=0.19.0",
    "watchdog>=2.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
fckgit = "fckgit:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0", "psutil>=5.9.0"]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[project.entry-points."mcp"]
fckgit = "mcp_server:main"
